--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>this is larg tag</h1>
     <P>this is paragraph tag</P>
+    <h2> riddhi </h2>
+    <p> paragraph 2
+    </p>
 </body>
 </html>
